Image layouts and overflow fix

--- a/jester/static/css/base.css
+++ b/jester/static/css/base.css
@@ -48,7 +48,6 @@ p {
 }
 section {
     width: 100vw;
-    overflow: hidden;
 }
 
 /*Nav*/
@@ -119,26 +118,6 @@ section {
 
 #about {
     padding: 10%;
-}
-#about div:hover {
-    animation: bord 1s forwards ease-in;
-}
-@keyframes bord {
-    0% {
-        border-top: 2px solid #9a776f;
-    }
-    25% {
-        border-right: 2px solid #9a776f;
-    }
-    50% {
-        border-bottom: 2px solid #9a776f;
-    }
-    75% {
-        border-left: 2px solid #9a776f;
-    }
-    100% {
-        border: 4px solid #9a776f;
-    }
 }
 
 /*Works*/
